--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1045,6 +1045,7 @@ footer .footer-copyright span {
   gap: 15px;
   background: linear-gradient(90deg, #170925 20%, #1a1632 90%);
   border-bottom: 2px solid white;
+  padding: 10px 0;
   padding-left: 15px;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-user-holder img {
@@ -1061,10 +1062,6 @@ footer .footer-copyright span {
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder {
   height: 400px;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   position: relative;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-no-messages {
@@ -1074,6 +1071,10 @@ footer .footer-copyright span {
   font-size: 25px;
   text-align: center;
   opacity: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   transition: 300ms;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-typing {
@@ -1214,10 +1215,9 @@ footer .footer-copyright span {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: flex-end;
-  flex-direction: column;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder {
   width: 100%;
