--- a/src/style/main.css
+++ b/src/style/main.css
@@ -770,6 +770,44 @@ footer .footer-copyright span {
      object-fit: contain;
   cursor: pointer;
 }
+#lessons .lessons-inner .lessons-inner-bars-holder {
+  height: calc(100% - 70px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  position: fixed;
+  top: 65px;
+  z-index: 2;
+}
+#lessons .lessons-inner .lessons-inner-bars-holder .lessons-inner-progress-bar {
+  height: 100%;
+  width: 10px;
+  background-color: rgba(45, 42, 56, 0.7);
+  border-top: 5px solid white;
+  border-bottom: 5px solid white;
+  opacity: 0;
+  position: relative;
+  left: -10px;
+  transition: 300ms;
+}
+#lessons .lessons-inner .lessons-inner-bars-holder .lessons-inner-progress-bar .lessons-inner-progress-bar-line-helper {
+  height: 0;
+  width: 10px;
+  background-color: #ccc;
+  position: absolute;
+  top: 0;
+  transition: 300ms;
+}
+#lessons .lessons-inner .lessons-inner-bars-holder .lessons-inner-progress-bar .lessons-inner-progress-bar-line {
+  height: 0;
+  width: 10px;
+  background-color: white;
+  box-shadow: 5px 0px 10px 0px rgba(255, 255, 255, 0.4);
+  position: absolute;
+  top: 0;
+  transition: 300ms;
+}
 #lessons .lessons-inner .lessons-inner-lesson {
   display: flex;
   align-items: center;
