--- a/src/style/pages/lessons/inner/_main.scss
+++ b/src/style/pages/lessons/inner/_main.scss
@@ -10,6 +10,7 @@
     z-index: 2;
 
     @import "./lessons-inner-header";
+    @import "./lessons-inner-bars";
 
     .lessons-inner-lesson {
         @include center(column);
