--- a/src/style/pages/lessons/inner/_lessons-inner-bars.scss
+++ b/src/style/pages/lessons/inner/_lessons-inner-bars.scss
@@ -19,10 +19,10 @@
         .lessons-inner-progress-bar-line-helper {
             height: 0;
             width: 10px;
-            background-color: $grey;
+            background-color: $blue;
             position: absolute;
             top: 0;
-            transition: 300ms;
+            transition: 500ms;
         }
         
         .lessons-inner-progress-bar-line {
@@ -32,7 +32,7 @@
             box-shadow: 5px 0px 10px 0px rgba($color: white, $alpha: .4);
             position: absolute;
             top: 0;
-            transition: 300ms;
+            transition: 1s;
         }
     }
 }
