--- a/src/style/pages/lessons/inner/_lessons-inner-bars.scss
+++ b/src/style/pages/lessons/inner/_lessons-inner-bars.scss
@@ -1,24 +1,23 @@
 .lessons-inner-bars-holder {
-    height: calc(100% - 70px);
+    width: 100%;
     @include center;
-    position: fixed;
-    top: 65px;
+    position: absolute;
+    top: 100%;
+    left: 0;
     z-index: 2;
 
     .lessons-inner-progress-bar {
-        height: 100%;
-        width: 10px;
+        height: 10px;
+        width: 100%;
         background-color: $transparent-dark-grey;
-        border-top: 5px solid white;
-        border-bottom: 5px solid white;
+        border-left: 5px solid white;
+        border-right: 5px solid white;
         opacity: 0;
-        position: relative;
-        left: -10px;
         transition: 300ms;
 
         .lessons-inner-progress-bar-line-helper {
-            height: 0;
-            width: 10px;
+            height: 10px;
+            width: 0;
             background-color: $blue;
             position: absolute;
             top: 0;
@@ -26,8 +25,8 @@
         }
         
         .lessons-inner-progress-bar-line {
-            height: 0;
-            width: 10px;
+            height: 10px;
+            width: 0;
             background-color: white;
             box-shadow: 5px 0px 10px 0px rgba($color: white, $alpha: .4);
             position: absolute;
