--- a/src/style/pages/lessons/inner/_lessons-inner-progress-bar.scss
+++ b/src/style/pages/lessons/inner/_lessons-inner-progress-bar.scss
@@ -7,6 +7,7 @@
     position: absolute;
     top: 100%;
     left: 0;
+    transition: 300ms;
     z-index: 2;
 
     .lessons-inner-progress-bar-line-helper {
