--- a/src/style/pages/lessons/inner/content/_main.scss
+++ b/src/style/pages/lessons/inner/content/_main.scss
@@ -40,3 +40,4 @@
 @import "./lessons-inner-multiple-choice";
 @import "./lessons-inner-translate";
 @import "./lessons-inner-conversation";
+@import "./lessons-inner-connect";
